# meter

./: .env  .gitignore  Cargo.toml  Dockerfile  config.toml  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose-test.yaml  docker-compose.yaml  docker-compose.yml  run-dev.sh  run-prod.sh  start.sh  test-with-docker.sh  test.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
crates/db/: Cargo.toml  build.rs  schema.sql
crates/db/migrations/: 20240521174327_user.sql  20240521174327_user_tables.sql  20240601150319_management.sql  20240612101614_element.sql  20240614033050_system.sql  20241104081655_init.sql
crates/db/migrations/dml/: 20240605_init.sql
crates/db/queries/: case.sql  element.sql  field.sql  file.sql  permission.sql  plan.sql  project.sql  template.sql  user.sql  users.sql
crates/db/src/: lib.rs  redis.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  logger.rs  main.rs
crates/server/src/api/: mod.rs
crates/server/src/api/base/: auth.rs  display.rs  mod.rs  openapi.rs  user.rs
crates/server/src/api/management/: case.rs  element.rs  member.rs  mod.rs  plan.rs  project.rs
crates/server/src/api/system/: mod.rs  parameter.rs  project.rs  user.rs
crates/server/src/configure/: env.rs  mod.rs  secret.rs  server.rs  smtp.rs  storage.rs  template.rs  tracing.rs
crates/server/src/constant/: case.rs  mod.rs
crates/server/src/dao/: base.rs  case.rs  element.rs  entity.rs  file.rs  mod.rs  permission.rs  plan.rs  project.rs  user.rs
crates/server/src/dto/: mod.rs  request.rs  response.rs
crates/server/src/dto/request/: case.rs  file.rs  mod.rs  user.rs
crates/server/src/dto/response/: case.rs  mod.rs  user.rs
crates/server/src/entity/: case.rs  file.rs  mod.rs  permission.rs  project.rs  user.rs
crates/server/src/errors/: custom_extractor.rs  message.rs  mod.rs
crates/server/src/middleware/: access.rs  auth.rs
crates/server/src/server/: mod.rs
crates/server/src/service/: case.rs  element.rs  engine.rs  file.rs  member.rs  mod.rs  permission.rs  plan.rs  project.rs  redis.rs  schedule.rs  session.rs  token.rs  user.rs
crates/server/src/state/: mod.rs
crates/server/src/utils/: claim.rs  dir.rs  hash.rs  header.rs  http.rs  mod.rs  password.rs  smtp.rs  task.rs  time.rs
crates/server/tests/api/: main.rs  test_invalid_request.rs
crates/server/tests/api/context/: mod.rs  seeder.rs  state.rs
crates/server/tests/api/endpoints/: mod.rs
crates/server/tests/api/endpoints/functional_case/: mod.rs  test_field_ceate.rs  test_field_delete.rs  test_field_get.rs  test_field_update.rs  test_functional_case_create.rs  test_functional_case_get.rs  test_functional_case_update.rs  test_module_create.rs  test_module_delete.rs  test_module_get.rs  test_module_update.rs
crates/server/tests/api/endpoints/permission/: mod.rs  test_role_permission.rs  test_user_permission.rs
crates/server/tests/api/endpoints/role/: mod.rs  test_role_create.rs  test_role_delete.rs  test_role_get.rs
crates/server/tests/api/endpoints/user/: login.rs  mod.rs  register.rs  test_login.rs  test_logout.rs  test_register.rs  test_user_delete.rs  test_user_get.rs  test_user_update.rs
crates/server/tests/api/helper/: api.rs  assert.rs  mod.rs  project.rs  result.rs  user.rs
crates/server/tests/biz/service/: mod.rs  test_script_gen.rs
crates/server/tests/data/: mailpit.db
settings/: base.toml  dev.toml  prod.toml  test.toml
static/keys/: private_access_rsa_key.pem  private_refresh_rsa_key.pem  public_access_rsa_key.pem  public_refresh_rsa_key.pem
static/templates/: base.cy.js  cypress_template.cy.js
static/templates/email/: register.html
