[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-postgres = "0.13.2"
rustls = "0.23.7"
rustls-pki-types = "1.7.0"
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.12.0"
