[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
serde = { version = "1.0.202", features = ["derive"] }
anyhow = "1.0.86"
toml = "0.8.13"

[dependencies]
cornucopia_async = "0.6.0"
deadpool-postgres = "0.12.1"
futures = "0.3.30"
postgres-types = "0.2.6"
rustls = "0.23.7"
rustls-pki-types = "1.7.0"
serde = { version = "1.0.202", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version="0.7.10", features = ["with-uuid-0_8"] }
tokio-postgres-rustls = "0.12.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }


