[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[build-dependencies]
serde = { version = "1.0.202", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
config = "0.14.0"
anyhow = "1.0.86"
toml = "0.8.13"

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio"] }
cornucopia_async = "0.6.0"
redis = { version = "0.27.5", features = ["tokio-comp"] }
tokio-postgres = { version = "0.7.10", features = [
    "with-uuid-1",
    "with-time-0_3",
    "with-serde_json-1",
] }
deadpool-postgres = "0.12.0"
postgres-types = { version = "0.2.6", features = ["derive"] }

rustls = "0.23.7"

tokio-postgres-rustls = "0.13.0"

rustls-pki-types = "1.7.0"

serde_json = "1.0.117"

time = { version = "0.3.36", default-features = false, features = [
    "formatting",
] }

tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

uuid = { version = "1.8.0", features = ["serde", "v4"] }

futures = "0.3.30"
tracing = { version = "0.1.40", features = [
    "max_level_debug",
    "release_max_level_info",
    "log",
] }

deadpool = "0.12.1"
