[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
db = { path = "../db" }
tokio = { version = "1.37.0", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }

serde = { version = "1.0.198", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }

# Errors
anyhow = "1.0.86"

# Observability
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40", features = ["max_level_debug", "release_max_level_info", "log"] }

# Backtrace in panic hook
backtrace = "0.3.71"

# Time Processing
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
time = "0.3.36"

# Database
uuid = { version = "1.8.0", features = ["serde", "v4"] }
tokio-postgres = { version="0.7.10", features = ["with-uuid-1"] }

# OpenAPI
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

garde = { version = "0.18.0", features = ["full"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
strum = { version = "0.26.2", features = ["derive"] }
toml = "0.8.13"

# Hashing
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
redis = { version = "0.25.4", features = ["tokio-comp"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
