[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.7.9"
db = { path = "../db" }
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tower-http = { version = "0.6.1", features = ["cors", "trace", "timeout"] }

# Config
config = "0.14.0"

# Errors
anyhow = "1.0.86"
thiserror = "1.0.61"

# Observability
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-appender = "0.2.3"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-opentelemetry = "0.27.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-stdout = "0.26.0"
opentelemetry-otlp = { version = "0.26.0", features = [
    "http-json",
    "reqwest-client",
] }
opentelemetry = "0.26.0"

# Backtrace in panic hook
backtrace = "0.3.71"

# Time Processing
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
time = { version = "0.3.36", features = [] }

# Database
uuid = { version = "1.8.0", features = ["serde", "v4"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1"] }

# OpenAPI
utoipa = { version = "5.1.3", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }

garde = { version = "0.20.0", features = ["full"] }
strum = { version = "0.26.2", features = ["derive"] }
toml = "0.8.13"

# Hashing
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
redis = { version = "0.27.5", features = ["tokio-comp"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = { version = "0.5.1", features = ["full"] }
bytes = "1.6.0"
futures = "0.3.30"

# ssh
ssh2 = "0.9.4"

# Template engine
tera = "1.20.0"
rand = "0.8.5"

# email
lettre = { version = "0.11.9", features = ["tokio1-native-tls", "builder"] }

# http client
reqwest = { version = "0.12.5", features = ["json", "multipart", "stream"] }

# unit-test
test-context = "0.3.0"
wiremock = "0.6.2"
fake = { version = "2.10.0", features = ["derive", "uuid", "chrono"] }

# log
log = "0.4.22"
log-derive = "0.4.1"
